GearsetPOC/force-app/main/default/objects/SalesforceMemberPointsHistory__x/SalesforceMemberPointsHistory__x.object-meta.xml
<CustomObject>
    <description>SalesforceMemberPointsHistory</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceMemberPointsHistory</externalName>
    <label>Loyalty member points history</label>
    <pluralLabel>Loyalty member points history</pluralLabel>
</CustomObject>