GearsetPOC/force-app/main/default/objects/SalesforceMemberPointsHistory__x/fields/DepartureDateTime__c.field-meta.xml
<CustomField>
    <fullName>DepartureDateTime__c</fullName>
    <externalDeveloperName>DepartureDateTime</externalDeveloperName>
    <label>DepartureDateTime</label>
    <type>DateTime</type>
</CustomField>