GearsetPOC/force-app/main/default/objects/SalesforceMemberPointsHistory__x/fields/DestinationDescription__c.field-meta.xml
<CustomField>
    <fullName>DestinationDescription__c</fullName>
    <externalDeveloperName>DestinationDescription</externalDeveloperName>
    <label>DestinationDescription</label>
    <length>128</length>
    <type>Text</type>
</CustomField>