GearsetPOC/force-app/main/default/objects/SalesforceMemberPointsHistory__x/fields/ManualAdjustmentDescription__c.field-meta.xml
<CustomField>
    <fullName>ManualAdjustmentDescription__c</fullName>
    <description>ManualAdjustmentDescription</description>
    <externalDeveloperName>ManualAdjustmentDescription</externalDeveloperName>
    <label>Manual adjustment description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>