GearsetPOC/force-app/main/default/objects/SalesforceMemberPointsHistory__x/fields/ManualAdjustmentReasonCode__c.field-meta.xml
<CustomField>
    <fullName>ManualAdjustmentReasonCode__c</fullName>
    <description>ManualAdjustmentReasonCode</description>
    <externalDeveloperName>ManualAdjustmentReasonCode</externalDeveloperName>
    <label>Manual adjustment reason code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>