GearsetPOC/force-app/main/default/objects/SalesforceMemberPointsHistory__x/fields/ManualAdjustmentReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>ManualAdjustmentReasonDescription__c</fullName>
    <description>ManualAdjustmentReasonDescription</description>
    <externalDeveloperName>ManualAdjustmentReasonDescription</externalDeveloperName>
    <label>Manual adjustment reason description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>