GearsetPOC/force-app/main/default/objects/SalesforceMemberPointsHistory__x/fields/MemberSalesforceId__c.field-meta.xml
<CustomField>
    <fullName>MemberSalesforceId__c</fullName>
    <description>MemberSalesforceId</description>
    <externalDeveloperName>MemberSalesforceId</externalDeveloperName>
    <label>Member salesforce id</label>
    <length>128</length>
    <referenceTo>SalesforceMember__x</referenceTo>
    <relationshipLabel>Loyalty member points history</relationshipLabel>
    <relationshipName>SalesforceMemberPointsHistory</relationshipName>
    <type>ExternalLookup</type>
</CustomField>