GearsetPOC/force-app/main/default/objects/SalesforceMemberPointsHistory__x/fields/OasisAuditRef__c.field-meta.xml
<CustomField>
    <fullName>OasisAuditRef__c</fullName>
    <label>OasisAuditRef</label>
    <length>128</length>
    <type>Text</type>
</CustomField>