GearsetPOC/force-app/main/default/objects/SalesforceMemberPointsHistory__x/fields/OriginCode__c.field-meta.xml
<CustomField>
    <fullName>OriginCode__c</fullName>
    <externalDeveloperName>OriginCode</externalDeveloperName>
    <label>OriginCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>