GearsetPOC/force-app/main/default/objects/SalesforceMemberPointsHistory__x/fields/OriginDescription__c.field-meta.xml
<CustomField>
    <fullName>OriginDescription__c</fullName>
    <externalDeveloperName>OriginDescription</externalDeveloperName>
    <label>OriginDescription</label>
    <length>128</length>
    <type>Text</type>
</CustomField>