GearsetPOC/force-app/main/default/objects/SalesforceMemberPointsHistory__x/fields/RunningTotal__c.field-meta.xml
<CustomField>
    <fullName>RunningTotal__c</fullName>
    <label>Running total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>